<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp_bg"
    tools:context=".UploadVideoActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_grad"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_video_student_profile"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/video_upload_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/video_title_upload"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/video_upload_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_name_upload"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/video_upload_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comments"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/select_video_upload_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="select_video_upload"
                android:text="@string/select_video_upload"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/upload_video_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_video"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>