<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".LoginPage">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:padding="21dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instructor_profile_title"
                android:textColor="#0C0C0C"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/instructor_profile_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:hint="@string/instructor_profile_edit_name"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/instructor_profile_edit_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:hint="@string/instructor_profile_edit_degree"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/instructor_profile_edit_currentjob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:hint="@string/instructor_profile_edit_currentjob"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/instructor_profile_edit_areaofspecialisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:hint="@string/instructor_profile_edit_areaofspecialisation"
                android:inputType="text"
                android:padding="10dp" />

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                android:text="@string/instructor_profile_edit_save" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>