<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/login_bg"
    tools:context=".LoginPage">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="10dp"
        android:padding="21dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/instructor_profile_title"
                android:textColor="#0C0C0C"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructor_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/instructor_profile_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/instructor_profile_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_emailid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructor_profile_emailid"
                android:textColor="#050505"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_emailid_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_degree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/instructor_profile_degree"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_degree_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_currentjob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructor_profile_currentjob"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_currentjob_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_areaofspecialisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instructor_profile_areaofspecialisation"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/instructor_profile_areaofspecialisation_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="24sp" />

            <Button
                android:id="@+id/startEditInstructor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:importantForAccessibility="no"
                android:text="@string/instructor_profile_editprofile" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>