<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images__3_"
    tools:context=".studentEditProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/edit_profile"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#D81B60"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student_name_2"
                android:textAlignment="viewStart"
                android:textColor="@color/std_color_tv"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/student_name_2"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textColor="#FDD835"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/standard"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/std_color_tv"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/standard"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textColor="#D81B60"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/institute_name"
                android:textAlignment="viewStart"
                android:textColor="#12D1E8"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/institute_name"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textColor="#D81B60"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favourite_subject"
                android:textAlignment="viewStart"
                android:textColor="#12D1E8"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/favorite_subject"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textColor="#D81B60"
                android:textSize="36sp"
                android:textStyle="bold" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:layout_gravity="center"
                android:background="@color/transparent"
                app:cornerRadius="10dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>